<resources>
    <string name="app_name">Boa Viagem</string>
    <string name="usuario">usuario</string>
    <string name="senha">senha</string>
    <string name="entrar">entrar</string>

    <string name="mensagem_erro">Usuário ou senha inválidos!!!</string>
    <string name="novo_gasto">Novo_gasto</string>
    <string name="nova_viagem">Nova_viagem</string>
    <string name="minhas_viagens">Minhas_viagens</string>
    <string name="configura_es">Configurações</string>
    <string name="categoria">categoria</string>
    <string name="valor">valor</string>
    <string name="data">data</string>
    <string name="selecione">selecione</string>
    <string name="descricao">descricao</string>
    <string name="local">local</string>
    <string name="gastei">gastei</string>
    <string name="remover">Remover</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover viagem</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da viagem</string>
    <string name="neg_cios">Negócios</string>
    <string name="data_da_sa_da">Data da saída</string>
    <string name="data_da_chegada">Data da chegada</string>
    <string name="or_amento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de pessoas</string>
    <string name="criar_nova_viagem">Criar Nova Viagem</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
</resources>
